production mobile bug fix

--- a/styles/CarouselHorizontal.module.css
+++ b/styles/CarouselHorizontal.module.css
@@ -27,7 +27,7 @@
 
 .carousel {
   position: relative;
-  width: 100vw;
+  width: 160rem;
   height: calc(100vh / 3);
   margin: 0;
   padding: 0;
